--- a/pipelines/backport-ops/loggregator-101.yml
+++ b/pipelines/backport-ops/loggregator-101.yml
@@ -116,6 +116,7 @@
     cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
     cp cf-deployment/operations/experimental/use-bosh-dns-for-containers.yml ops-files/
     cp cf-deployment/operations/use-compiled-releases.yml ops-files/
+    cp cf-deployment/operations/use-latest-windows-stemcell.yml ops-files/
 
     cat <<EOT >> ops-files/on-the-fly.yml
     - type: replace
@@ -150,6 +151,7 @@
     use-compiled-releases.yml
     on-the-fly.yml
     windows-cell.yml
+    use-latest-windows-stemcell.yml
     use-bosh-dns.yml
     use-bosh-dns-for-containers.yml
 
