Use latest loggregator-agent release for loggregator pipeline
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -882,6 +882,11 @@ jobs:
                 name: loggregator
                 version: latest
             - type: replace
+              path: /releases/name=loggregator-agent
+              value:
+                name: loggregator-agent
+                version: latest
+            - type: replace
               path: /update/max_in_flight
               value: 5
             - type: replace
