Remove backport ops files
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/cf-syslog-drain.yml
+++ b/pipelines/cf-syslog-drain.yml
@@ -425,9 +425,6 @@ jobs:
     input_mapping:
       environment: pipeline-pool
     file: loggregator-ci/tasks/env-pool-tasks/bosh-cleanup.yml
-  on_failure:
-    put: pipeline-pool
-    params: {release: pipeline-pool}
 
 - name: cats
   serial: true
@@ -453,9 +450,6 @@ jobs:
       params:
         NODES: 9
         USE_WINDOWS: false
-      on_failure:
-        put: pipeline-pool
-        params: {release: environment}
 
 - name: cfar-lats
   serial: true
@@ -481,9 +475,7 @@ jobs:
       params:
         SYSTEM_DOMAIN: loggr.cf-app.com
         SKIP_SSL_VALIDATION: true
-      on_failure:
-        put: pipeline-pool
-        params: {release: environment}
+        USE_WINDOWS: false
 
 - name: unclaim-environment
   serial: true
