--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -100,6 +100,7 @@ resources:
     uri: git@github.com:cloudfoundry/loggregator-agent-release.git
     branch: master
     private_key: ((cf-loggregator-oauth-bot-key))
+    disable_ci_skip: true
 
 - name: go-loggregator
   type: git
