--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -886,6 +886,7 @@ jobs:
         - name: bbl-state
         - name: cf-deployment
         - name: loggregator-agent-release
+        - name: loggregator-release
         outputs:
         - name: ops-files
         run:
@@ -899,6 +900,7 @@ jobs:
             cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
             cp cf-deployment/operations/experimental/use-bosh-dns-for-containers.yml ops-files/
             cp loggregator-agent-release/manifests/operations/infrastructure-metrics.yml ops-files/infrastructure-metrics.yml
+            cp loggregator-release/manifests/operations/add-rlp-gateway-to-cf.yml ops-files/
 
             cat <<EOT >> ops-files/on-the-fly.yml
             - type: replace
@@ -941,6 +943,7 @@ jobs:
           use-bosh-dns.yml
           use-bosh-dns-for-containers.yml
           infrastructure-metrics.yml
+          add-rlp-gateway-to-cf.yml
     - put: deployments-loggregator
       input_mapping:
         environment: pipeline-pool
