add rlp-gateway to playground deployment
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -213,6 +213,7 @@ jobs:
       - name: cf-deployment
       - name: log-cache-release
       - name: loggregator-agent-release
+      - name: loggregator-release
       outputs:
       - name: ops-files
       run:
@@ -227,6 +228,7 @@ jobs:
           cp cf-deployment/operations/experimental/use-bosh-dns-for-containers.yml ops-files/
           cp bbl-state/gcp/playground/ops-files/*.yml ops-files/
           cp log-cache-release/manifests/operations/deploy-in-cf.yml ops-files/add-log-cache.yml
+          cp loggregator-release/manifests/operations/add-rlp-gateway-to-cf.yml ops-files/
 
           cat <<EOT >> ops-files/on-the-fly.yml
           - type: replace
@@ -267,6 +269,7 @@ jobs:
         on-the-fly.yml
         use-bosh-dns.yml
         use-bosh-dns-for-containers.yml
+        add-rlp-gateway-to-cf.yml
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
     params:
