--- a/pipelines/log-cache.yml
+++ b/pipelines/log-cache.yml
@@ -11,6 +11,9 @@ groups:
   - log-cache-master-promotion
   - log-cache-cli-promotion
   - blackbox-deploy
+  - cf-blackbox-tests
+  - cf-blackbox-group-tests
+  - deploy-datadog-forwarder
 - name: leadership-election
   jobs:
   - leadership-election-tests
@@ -73,6 +76,13 @@ resources:
     private_key: {{cf-loggregator-oauth-bot-key}}
     paths:
     - docker-images
+
+- name: loggregator-tools
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/loggregator-tools.git
+    branch: master
+    private_key: {{loggregator-key}}
 
 - name: nozzle-image
   type: docker-image
@@ -436,6 +446,7 @@ jobs:
       repository: merged-dest
 
 - name: lcats
+  serial_groups: [live-tests]
   serial: true
   plan:
   - aggregate:
@@ -567,6 +578,149 @@ jobs:
       vars-files: deployments-loggregator
       vars-store: deployments-loggregator
 
+- name: cf-blackbox-tests
+  public: false
+  serial_groups: [live-tests]
+  serial: true
+  plan:
+  - aggregate:
+    - get: loggregator-tools
+    - get: loggregator-ci
+    - get: 10m
+      trigger: true
+  - aggregate:
+    - task: push-request-spinner
+      file: loggregator-ci/tasks/log-cache-request-spinner-push/task.yml
+      timeout: 15m
+      params:
+        APP_NAME: "request-spinner"
+        SYSTEM_DOMAIN: "lime.loggr.cf-app.com"
+        LOG_CACHE_ADDR: http://log-cache.lime.loggr.cf-app.com
+        ORG: test
+        SPACE: test
+        USERNAME: admin
+        PASSWORD: {{cf_admin_password}}
+        SKIP_SSL_VALIDATION: true
+        UAA_CLIENT: blackbox
+        UAA_CLIENT_SECRET: {{blackbox_client_secret}}
+    - task: push-log-cache-siege
+      file: loggregator-ci/tasks/log-cache-siege-push/task.yml
+      timeout: 15m
+      params:
+        APP_NAME: "log-cache-siege"
+        SYSTEM_DOMAIN: "lime.loggr.cf-app.com"
+        LOG_CACHE_ADDR: http://log-cache.lime.loggr.cf-app.com
+        REQUEST_SPINNER_ADDR: http://request-spinner.lime.loggr.cf-app.com
+        ORG: test
+        SPACE: test
+        USERNAME: admin
+        PASSWORD: {{cf_admin_password}}
+        SKIP_SSL_VALIDATION: true
+        UAA_CLIENT: blackbox
+        UAA_CLIENT_SECRET: {{blackbox_client_secret}}
+  # Note: all log-cache testing tasks should run serially to prevent test
+  # result pollution
+  - task: log-cache-blackbox-tests
+    file: loggregator-ci/tasks/cf-log-cache-blackbox/task.yml
+    timeout: 15m
+    params:
+      APP_NAME: "log-cache-blackbox"
+      APP_ADDR: "log-cache-blackbox.lime.loggr.cf-app.com"
+      SYSTEM_DOMAIN: "lime.loggr.cf-app.com"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      LOG_CACHE_URL: http://log-cache.lime.loggr.cf-app.com
+      ORG: test
+      SPACE: test
+      USERNAME: admin
+      PASSWORD: {{cf_admin_password}}
+      SKIP_SSL_VALIDATION: true
+      UAA_CLIENT: blackbox
+      UAA_CLIENT_SECRET: {{blackbox_client_secret}}
+  - task: log-cache-siege
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+      params:
+        LOG_CACHE_SIEGE_ADDR: http://log-cache-siege.lime.loggr.cf-app.com
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          #!/bin/bash
+          set -ex
+          curl -d '' -X POST $LOG_CACHE_SIEGE_ADDR/v1/siege
+
+- name: cf-blackbox-group-tests
+  public: false
+  serial_groups: [live-tests]
+  serial: true
+  plan:
+  - aggregate:
+    - get: loggregator-tools
+    - get: loggregator-ci
+    - get: 10m
+      trigger: true
+  - aggregate:
+    - task: push-request-spinner
+      file: loggregator-ci/tasks/log-cache-request-spinner-push/task.yml
+      timeout: 15m
+      params:
+        APP_NAME: "request-spinner"
+        SYSTEM_DOMAIN: "lime.loggr.cf-app.com"
+        LOG_CACHE_ADDR: http://log-cache.lime.loggr.cf-app.com
+        ORG: test
+        SPACE: test
+        USERNAME: admin
+        PASSWORD: {{cf_admin_password}}
+        SKIP_SSL_VALIDATION: true
+        UAA_CLIENT: blackbox
+        UAA_CLIENT_SECRET: {{blackbox_client_secret}}
+  - task: log-cache-group-blackbox-tests
+    file: loggregator-ci/tasks/log-cache-group-blackbox/task.yml
+    timeout: 15m
+    params:
+      APP_NAME: "log-cache-blackbox-groups"
+      APP_ADDR: "log-cache-blackbox-groups.lime.loggr.cf-app.com"
+      SYSTEM_DOMAIN: "lime.loggr.cf-app.com"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      LOG_CACHE_URL: http://log-cache.lime.loggr.cf-app.com
+      ORG: test
+      SPACE: test
+      USERNAME: admin
+      PASSWORD: {{cf_admin_password}}
+      SKIP_SSL_VALIDATION: true
+      UAA_CLIENT: blackbox
+      UAA_CLIENT_SECRET: {{blackbox_client_secret}}
+
+- name: deploy-datadog-forwarder
+  public: false
+  serial: true
+  plan:
+  - aggregate:
+    - get: loggregator-tools
+    - get: loggregator-ci
+  - task: deploy-datadog-forwarder
+    file: loggregator-ci/tasks/datadog-forwarder/task.yml
+    timeout: 15m
+    params:
+      APP_NAME: "datadog-forwarder"
+      SYSTEM_DOMAIN: "lime.loggr.cf-app.com"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DATADOG_TAGS: accumulator-lime
+      ORG: test
+      SPACE: test
+      USERNAME: admin
+      PASSWORD: {{cf_admin_password}}
+      LOG_CACHE_HTTP_ADDR: https://log-cache.lime.loggr.cf-app.com
+      LOG_CACHE_GROUP_NAME: lime-datadog-forwarder
+      SKIP_SSL_VALIDATION: true
+      UAA_CLIENT: datadog-forwarder
+      UAA_CLIENT_SECRET: ((datadog_forwarder_client_secret))
+
 ###############################################################################
 # SHARED
 ###############################################################################
@@ -576,13 +730,13 @@ jobs:
   - cf-deploy
   - bosh-cf-cats
   - bosh-cfar-lats
+  - live-tests
   plan:
   - aggregate:
     - get: loggregator-ci
     - get: bbl-state
       resource: deployments-loggregator
     - get: cf-deployment
-      trigger: true
     - get: cf-deployment-concourse-tasks
     - get: loggregator-release
       trigger: true
@@ -676,17 +830,32 @@ jobs:
               name: lcats_client_secret
               type: password
           - type: replace
+            path: /instance_groups/name=uaa/jobs/name=uaa/properties/uaa/clients/blackbox?
+            value:
+              authorities: doppler.firehose
+              authorized-grant-types: client_credentials
+              scope: doppler.firehose
+              secret: ((blackbox_client_secret))
+          - type: replace
+            path: /variables/name=blackbox_client_secret?
+            value:
+              name: blackbox_client_secret
+              type: password
+          - type: replace
+            path: /instance_groups/name=uaa/jobs/name=uaa/properties/uaa/clients/datadog-forwarder?
+            value:
+              authorities: doppler.firehose
+              authorized-grant-types: client_credentials
+              scope: doppler.firehose
+              secret: ((datadog_forwarder_client_secret))
+          - type: replace
+            path: /variables/name=datadog_forwarder_client_secret?
+            value:
+              name: datadog_forwarder_client_secret
+              type: password
+          - type: replace
             path: /instance_groups/name=api/instances
             value: 2
-          - type: replace
-            path: /instance_groups/name=doppler/jobs/-
-            value:
-              name: log-cache-blackbox
-              release: log-cache
-              properties:
-                datadog:
-                  api_key: {{datadog-dev-api-key}}
-                  origin_host: lime.loggr.cf-app.com
           - type: replace
             path: /instance_groups/name=doppler/vm_type
             value: small-highmem
@@ -734,23 +903,14 @@ jobs:
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
       BBL_STATE_DIR: gcp/lime
-  - task: create-blackbox-space
+  - task: create-test-space
     file: loggregator-ci/tasks/create-org-and-space/task.yml
     input_mapping:
       vars-store: bbl-state
     params:
       VARS_STORE_FILE: gcp/lime/deployment-vars.yml
-      ORG: system
-      SPACE: blackbox-testing
-      SYSTEM_DOMAIN: lime.loggr.cf-app.com
-  - task: create-accumulators-space
-    file: loggregator-ci/tasks/create-org-and-space/task.yml
-    input_mapping:
-      vars-store: bbl-state
-    params:
-      VARS_STORE_FILE: gcp/lime/deployment-vars.yml
-      ORG: system
-      SPACE: accumulators
+      ORG: test
+      SPACE: test
       SYSTEM_DOMAIN: lime.loggr.cf-app.com
 
 - name: leadership-election-tests
