Add isolation segments to the loggregator cf-deploy by default
[#156276527]

Signed-off-by: Mark Alston <malston@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -159,7 +159,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment
-    branch: loggregator-iso-segs
+    branch: loggr-iso-segs
     private_key: ((loggregator-key))
 
 - name: cf-deployment-concourse-tasks
