--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -805,6 +805,7 @@ jobs:
       - name: bbl-state
       - name: cf-deployment
       - name: loggregator-agent-release
+      - name: loggregator-release
       outputs:
       - name: ops-files
       run:
@@ -823,6 +824,7 @@ jobs:
           cp cf-deployment/operations/test/add-persistent-isolation-segment-diego-cell.yml ops-files/
           cp bbl-state/gcp/coconut-bbl/ops-files/*.yml ops-files/
           cp loggregator-agent-release/manifests/operations/infrastructure-metrics.yml ops-files/infrastructure-metrics.yml
+          cp loggregator-release/manifests/operations/add-rlp-gateway-to-cf.yml ops-files/add-rlp-gateway.yml
 
           cat <<EOT >> ops-files/on-the-fly.yml
           - type: replace
@@ -879,6 +881,7 @@ jobs:
         use-bosh-dns.yml
         use-bosh-dns-for-containers.yml
         infrastructure-metrics.yml
+        add-rlp-gateway.yml
   - put: deployments-loggregator
     params:
       repository: updated-vars-store
