Add timer trigger to loggregator agent master promotion

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -772,6 +772,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
+    - get: 5m
+      trigger: true
     - get: loggregator-agent-release-elect
       passed: ["loggregator-agent-promotion"]
       trigger: true
