--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -934,6 +934,7 @@ jobs:
     - task: enable-feature-flags
       file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
       params:
+        VARS_STORE_FILE: gcp/ci-pool/six/loggregator-vars.yml
         SYSTEM_DOMAIN: six.loggr.cf-app.com
         ENABLED_FEATURE_FLAGS: diego_docker
 
